tests/fixtures/invalid/max_list_str.py
# Cannot call max() with List[int], Str
x = max([1, 2, 3], "hello")
